index.css
html {
    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}
body {
    background-color: #571717;

}
footer {
    text-align: center;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
    background-color: #681919;
    color: #f9bdbd;
    padding: 20px;
    box-shadow: 0 0 10px #350000;
  }
  
button {
    font-size: 5em;
    background-color: transparent;
    min-width: 60px;
    border: transparent;
    color: #d37070;
}
input[type="range"] {
    width: 100%;
    -webkit-appearance: none;
    height: 30px;
    background: #ddd;
    outline: none;
    opacity: 0.7;
    border-radius: 2px;
    box-shadow: 0 0 10px #f89191;
    margin-top: -5px;
    margin-right: 15px;
}

input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    width: 35px;
    height: 35px;
    background: #d37070;
    border-radius: 2px;
    border: 1px #e47272 solid;
    box-shadow: 0 0 2px #620a0a;
}
h1 {
    color: #dfc8c8;
    animation: pulse-glow 10s infinite;
    font-size: 4em;
    text-decoration: underline;
    text-align: center;
    margin-bottom: 80px;
}
img {
    filter: invert(80%) hue-rotate(180deg);
    color: rgb(104, 104, 247);
    width: 150px;
}
.containersOne {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}
.containersTwo {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}
.containerOne,
.containerTwo,
.containerThree,
.containerFour,
.containerFive,
.containerSix {
    display: flex;
    width: 270px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-left: 10px;
    margin-right: 10px;
    padding-right: 10px;
    padding-left: 10px;
    padding-bottom: 40px;
    margin-top: -10px;
    /*border: 1px red solid;*/
}
.controlOne,
.controlTwo,
.controlThree,
.controlFour,
.controlFive,
.controlSix {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    /*border: 1px white solid;*/
}
@media only screen and (max-width: 768px) {
    .containerOne,
    .containerTwo,
    .containerThree,
    .containerFour,
    .containerFive,
    .containerSix {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 100%;
        padding-bottom: 40px;
        margin-top: 0px;
    }

    .controlOne,
    .controlTwo,
    .controlThree,
    .controlFour,
    .controlFive,
    .controlSix {
        display: flex;
        justify-content: center;
        width: 100%;
    }
    h1 {
        color: #e3a5a5;
        animation: pulse-glow 10s infinite;
        font-size: 3em;
        text-decoration: underline;
        text-align: center;
        margin-bottom: 80px;
    }
}

@keyframes pulse-glow {
    0% {
        text-shadow: none;
    }
    50% {
        text-shadow: 0 0 8px #dfc8c8;
    }
    100% {
        text-shadow: none;
    }
}

